<resources>
    <string name="app_name">Triary</string>

    <string name="login_title">로그인</string>
    <string name="login_email">이메일</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_btn">로그인</string>
    <string name="join_title">회원가입</string>
    <string name="join_title_email">이메일</string>
    <string name="join_btn_phoneCode">확인</string>
    <string name="join_et_email">이메일을 입력하세요.</string>
    <string name="join_btn_email">중복확인</string>
    <string name="join_et_pw">비밀번호를 입력하세요.</string>
    <string name="join_et_pw_2">비밀번호를 다시 입력하세요.</string>
    <string name="join_et_name">이름을 입력하세요.</string>
    <string name="join_title_name">이름</string>
    <string name="join_title_birth">생년월일</string>
    <string name="join_et_birth">생년월일을 입력하세요.</string>
    <string name="join_title_phone">전화번호</string>
    <string name="join_et_phone">전화번호를 입력하세요.</string>
    <string name="join_btn_phone">인증요청</string>
    <string name="join_et_phoneCode">인증번호</string>
    <string name="join_btn_cancel">취소</string>
    <string name="join_btn_join">가입</string>
    <string name="join_title_pw">비밀번호</string>

    <string name="mypage_title">마이페이지</string>
    <string name="mypage_title_email">이메일</string>
    <string name="mypage_btn_phoneCode">확인</string>
    <string name="mypage_et_email">이메일을 입력하세요.</string>
    <string name="mypage_btn_email">중복확인</string>
    <string name="mypage_et_pw">비밀번호를 입력하세요.</string>
    <string name="mypage_et_pw_2">비밀번호를 다시 입력하세요.</string>
    <string name="mypage_et_name">이름을 입력하세요.</string>
    <string name="mypage_title_name">이름</string>
    <string name="mypage_title_birth">생년월일</string>
    <string name="mypage_et_birth">생년월일을 입력하세요.</string>
    <string name="mypage_title_phone">전화번호</string>
    <string name="mypage_et_phone">전화번호를 입력하세요.</string>
    <string name="mypage_btn_phone">인증요청</string>
    <string name="mypage_et_phoneCode">인증번호를 입력하세요.</string>
    <string name="mypage_title_phoneCode">인증번호</string>
    <string name="mypage_btn_cancel">취소</string>
    <string name="mypage_btn_update">수정</string>
    <string name="mypage_title_pw">비밀번호</string>
    <string name="actionbar_name">Triary</string>
    <string name="nav_header_title">사용자 닉네임</string>
    <string name="nav_header_subtitle">이메일 주소</string>

    <string name="nav_option_myPage">마이페이지</string>
    <string name="nav_option_moving">동선확인</string>
    <string name="nav_option_condition">결제 문자 확인</string>
    <string name="nav_option_setting">설정</string>
    <string name="nav_option_logout">로그아웃</string>
    <string name="password_reset_title">비밀번호 재설정</string>

    <string name="string_value">이미지 다운로드 실패</string>

    <string name="password_title_send">보내기</string>

    <string name="init_lat">37.606320</string>
    <string name="init_lng">127.041808</string>
    <string name="api_key">AIzaSyBirPKZ6hwetA2S_2x_Yhez11zriqotBD4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>