<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_myPage"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/nav_option_myPage" />
        <item
            android:id="@+id/item_moving"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/nav_option_moving" />
        <item
            android:id="@+id/item_condition"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/nav_option_condition" />
        <item
            android:id="@+id/item_logout"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/nav_option_logout"
            />
    </group>
</menu>